<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_reply">Reply</string>
    <string name="action_share">Share</string>
    <string name="alert_error_templete_no_have_list">담을 수 있는 내용이 없습니다</string>
    <string name="alert_loading_server_response">서버와 통신중입니다…</string>
    <string name="alert_market_update_optional">선택 업데이트가 있습니다.\n업데이트 후 사용해 보세요.</string>
    <string name="alert_market_update_required">필수 업데이트가 있습니다.\n업데이트 후 사용 가능합니다.</string>
    <string name="alert_plz_input_all_info">모든 정보를 정확히 입력해 주세요</string>
    <string name="alert_plz_input_other_members">다른 팀원을 추가해주세요</string>
    <string name="app_name">Be:Plan</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_no">아니오</string>
    <string name="btn_ok">확인</string>
    <string name="btn_save">저장</string>
    <string name="btn_yes">예</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com_crashlytics_android_build_id">1c8cc253-2ae1-4183-b0d3-e0f2ea58c2bb</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">817538159410-r8266lqhsua7cmff63d1gm4ii9cvrova.apps.googleusercontent.com</string>
    <string name="dialog_delete_category_contents">카테고리를 삭제하시겠습니까?</string>
    <string name="dialog_delete_category_title">카테고리 삭제</string>
    <string name="dialog_delete_project_contents">프로젝트를 삭제하시겠습니까?</string>
    <string name="dialog_delete_project_title">프로젝트 삭제</string>
    <string name="dialog_delete_task_contents">할 일을 삭제하시겠습니까?</string>
    <string name="dialog_delete_task_title">할 일 삭제</string>
    <string name="dialog_display_overlay_message">화면 오버레이 권한 설정,화면 오버레이 권한 설정이 필요합니다\n설정 &gt; 앱에서 이 앱에 대한 화면 오버레이를 사용하도록 설정해야 합니다</string>
    <string name="dialog_display_overlay_title">화면 오버레이 권한 설정</string>
    <string name="dialog_edit_category_contents_hint">업무 제목을 입력하세요</string>
    <string name="dialog_edit_category_title">카테고리 관리</string>
    <string name="dialog_stop_timer_contents">타이머를 종료하시겠습니까?</string>
    <string name="dialog_stop_timer_title">타이머 종료</string>
    <string name="dialog_title_category_use">카테고리 사용하기</string>
    <string name="error_no_edit_task">수정가능한 Task가 없습니다.</string>
    <string name="error_server_not_success">서버에 문제가 발생했습니다\n잠시 후에 다시 시도해주세요</string>
    <string name="facebook_app_id">1832201980344124</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://beplan-c22dc.firebaseio.com</string>
    <string name="gcm_defaultSenderId">817538159410</string>
    <string name="google_api_key">AIzaSyAcQbrh9AK-j_C5q4r70GvZGpFg6YUwoRc</string>
    <string name="google_app_id">1:817538159410:android:081634219836c37f</string>
    <string name="google_crash_reporting_api_key">AIzaSyAcQbrh9AK-j_C5q4r70GvZGpFg6YUwoRc</string>
    <string name="google_storage_bucket">beplan-c22dc.appspot.com</string>
    <string name="hwfw_app_name">HWFW</string>
    <string name="imagepicker_action_done">DONE</string>
    <string name="imagepicker_action_ok">OK</string>
    <string name="imagepicker_error_create_image_file">Failed to create image file</string>
    <string name="imagepicker_error_images_not_exist">Images not exist</string>
    <string name="imagepicker_error_no_camera">No camera found</string>
    <string name="imagepicker_error_unknown">Unknown error</string>
    <string name="imagepicker_msg_limit_images">Limit selection to %d images</string>
    <string name="imagepicker_msg_no_camera_permission">To continue, please give access to take pictures</string>
    <string name="imagepicker_msg_no_images">No images</string>
    <string name="imagepicker_msg_no_write_external_storage_camera_permission">To continue, please give access to take pictures</string>
    <string name="imagepicker_msg_no_write_external_storage_permission">To continue, please give access to your photos</string>
    <string name="imagepicker_photo_count_multiple">%d images</string>
    <string name="imagepicker_photo_count_single">%d image</string>
    <string name="imagepicker_text_gif">GIF</string>
    <string name="imagepicker_title_folder">Albums</string>
    <string name="imagepicker_title_image">Galleries</string>
    <string name="notification_default_description">Be:Plan 에 사용되는 모든 알람 입니다</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="project_id">beplan-c22dc</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_my_info">내 정보</string>
    <string name="settings_push">방해금지 설정</string>
    <string name="settings_push_time">방해금지 시간 설정</string>
    <string name="settings_push_title">방해금지</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_alert">가입 확인</string>
    <string name="str_cancel">닫기</string>
    <string name="str_checkbox_msg_market_update">7일간 알림 보지 않기.</string>
    <string name="str_drawer_notification">알림</string>
    <string name="str_drawer_setting">설정</string>
    <string name="str_drawer_team_management">팀 관리</string>
    <string name="str_edit_project">프로젝트 수정</string>
    <string name="str_email_check">다음 이메일로 가입할 지 마지막으로 확인해주세요\nEmail은 가입하면 다시 바꿀 수 없습니다!</string>
    <string name="str_enable_disable_task">프로젝트 완료/프로젝트 완료취소</string>
    <string name="str_format_extended_work_time">aa h시 mm분</string>
    <string name="str_hint_keyword">검색할 키워드를 입력해주세요</string>
    <string name="str_hint_title">제목을 입력해주세요</string>
    <string name="str_hint_write">입력할 코멘트를 입력해주세요</string>
    <string name="str_next">다음에</string>
    <string name="str_permission_admin">팀 관리자</string>
    <string name="str_project_date_history">시간 기록</string>
    <string name="str_project_detail">상세</string>
    <string name="str_project_menu">프로젝트 메뉴</string>
    <string name="str_project_task_history">작업 기록</string>
    <string name="str_register">추가</string>
    <string name="str_toolbar_add">추가</string>
    <string name="str_toolbar_back">뒤로가기</string>
    <string name="str_toolbar_back_and_close">뒤로가기 또는 종료</string>
    <string name="str_toolbar_menu">메뉴</string>
    <string name="str_toolbar_more">더보기</string>
    <string name="str_toolbar_next">다음페이지</string>
    <string name="str_update">업데이트</string>
    <string name="str_view_all">모두보기</string>
    <string name="str_view_complete">완료</string>
    <string name="str_view_refuse">거절</string>
    <string name="str_view_request_cancel">요청취소</string>
    <string name="str_view_running">진행중</string>
    <string name="str_view_wating">대기중</string>
    <string name="thub_alert_dialog_blank">빈칸을 입력해주세요</string>
    <string name="thub_alert_dialog_cancel">정말 취소하시겠습니까?</string>
    <string name="thub_alert_dialog_continue">정말 진행하시겠습니까?</string>
    <string name="thub_alert_dialog_internet">인터넷 연결이 되어있지 않아 앱을 종료합니다.</string>
    <string name="thub_alert_dialog_logout">로그아웃을 하시겠습니까?</string>
    <string name="thub_alert_dialog_networking">서버와 통신중입니다...</string>
    <string name="thub_all">전체</string>
    <string name="thub_auto_login">자동 로그인</string>
    <string name="thub_base_hint_email">이메일을 입력해주세요</string>
    <string name="thub_base_hint_name">이름을 입력해주세요</string>
    <string name="thub_base_hint_pw">비밀번호를 입력해주세요</string>
    <string name="thub_cancel">취소</string>
    <string name="thub_email">이메일</string>
    <string name="thub_hour1">시</string>
    <string name="thub_hour2">시간</string>
    <string name="thub_login">로그인</string>
    <string name="thub_logout">로그아웃</string>
    <string name="thub_menu">메뉴</string>
    <string name="thub_minute">분</string>
    <string name="thub_name">이름</string>
    <string name="thub_ok">확인</string>
    <string name="thub_pass">비밀번호</string>
    <string name="thub_select1">선택</string>
    <string name="thub_select2">선택하기</string>
    <string name="thub_select_all1">전체선택</string>
    <string name="thub_select_all2">전체선택하기</string>
    <string name="thub_setting">설정</string>
    <string name="thub_signup">회원가입</string>
    <string name="thub_str_alarm">알람</string>
    <string name="thub_str_notification">알림</string>
    <string name="thub_str_play">재생하기</string>
    <string name="thub_str_remove">삭제하기</string>
    <string name="thub_str_replay">답변하기</string>
    <string name="thub_str_share">공유하기</string>
    <string name="tild">~</string>
</resources>
