<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50dp">
        <ImageView android:id="@+id/iv_menu" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/btn_menu_yel" android:contentDescription="@string/str_toolbar_menu"/>
        <ImageView android:id="@+id/iv_close" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/btn_close_yel" android:contentDescription="@string/str_toolbar_back_and_close"/>
        <ImageView android:id="@+id/iv_back" android:visibility="gone" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/btn_to_back" android:scaleType="centerInside" android:contentDescription="@string/str_toolbar_back_and_close"/>
        <kr.timehub.beplan.base.widgets.TextView android:textSize="16sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/tv_title" android:paddingRight="40dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" app:Font="1"/>
        <ImageView android:id="@+id/iv_add" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/btn_add_pink" android:contentDescription="@string/str_toolbar_add"/>
        <ImageView android:id="@+id/iv_more" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/btn_more_pink" android:contentDescription="@string/str_toolbar_more"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_my_cash" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="16dp">
            <ImageView android:layout_width="16dp" android:layout_height="16dp" android:layout_marginRight="4dp" android:src="@drawable/icn_coin"/>
            <kr.timehub.beplan.base.widgets.TextView android:textSize="12sp" android:textColor="#5e656d" android:gravity="center" android:id="@+id/tv_cash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="내 캐쉬 : 35,000"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:background="@color/project_divider" android:layout_width="match_parent" android:layout_height="1px"/>
</LinearLayout>
