<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/background_drawer" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginLeft="18dp" android:layout_marginRight="10dp">
        <ImageView android:layout_width="73dp" android:layout_height="20dp" android:src="@drawable/logo_text_menu" android:contentDescription="@string/app_name"/>
        <View android:background="@color/transparent" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <ImageButton android:id="@+id/btn_alarm" android:background="@null" android:layout_width="48dp" android:layout_height="match_parent" android:src="@drawable/btn_menu_alarm_selector" android:scaleType="fitCenter" android:contentDescription="@string/str_drawer_notification"/>
        <ImageButton android:id="@+id/btn_team" android:background="@null" android:layout_width="48dp" android:layout_height="match_parent" android:src="@drawable/btn_menu_team_selector" android:scaleType="fitCenter" android:contentDescription="@string/str_drawer_team_management"/>
        <ImageButton android:id="@+id/btn_option" android:background="@null" android:layout_width="48dp" android:layout_height="match_parent" android:src="@drawable/btn_menu_option_selector" android:scaleType="fitCenter" android:contentDescription="@string/str_drawer_setting"/>
    </LinearLayout>
    <View android:background="@color/drawer_divider" android:layout_width="match_parent" android:layout_height="1px"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/layout_profile" android:paddingLeft="18dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="72dp">
        <ImageView android:id="@+id/iv_profile" android:layout_width="45dp" android:layout_height="45dp"/>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="12dp">
            <kr.timehub.beplan.base.widgets.TextView android:textSize="16sp" android:textColor="@color/white" android:ellipsize="end" android:id="@+id/tv_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" app:Font="0"/>
            <kr.timehub.beplan.base.widgets.TextView android:textSize="13.5sp" android:textColor="@color/textColor_2" android:id="@+id/tv_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:Font="0"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:id="@+id/base_recyclerview" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
</LinearLayout>
