<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:id="@+id/v_status" android:layout_width="match_parent" android:layout_height="0dp"/>
    <kr.timehub.beplan.base.widgets.TextView android:textSize="15sp" android:textColor="@color/textColor" android:id="@+id/tv_my_inform" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/settings_my_info" app:Font="1"/>
    <kr.timehub.beplan.base.widgets.TextView android:textSize="15sp" android:textColor="@color/portland_orange" android:gravity="center" android:id="@+id/tv_decibel" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="-30" app:Font="0"/>
    <RelativeLayout android:gravity="center" android:paddingLeft="19dp" android:paddingRight="19dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <ImageView android:id="@+id/iv_seekbar_bg" android:background="@drawable/img_decibel_gauge" android:layout_width="match_parent" android:layout_height="20dp" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:layout_marginRight="15dp"/>
        <ImageView android:id="@+id/iv_decibel" android:background="#da823c" android:layout_width="0dp" android:layout_height="20dp" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:layout_marginRight="15dp"/>
        <SeekBar android:id="@+id/seekbar_decibel" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxHeight="20.9dp" android:max="30" android:progressDrawable="@color/transparent" android:thumb="@drawable/decibel_bar"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.5dp" android:layout_marginTop="70dp" android:layout_marginRight="7.5dp">
            <kr.timehub.beplan.base.widgets.TextView android:textSize="10sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-30" app:Font="0"/>
            <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
            <kr.timehub.beplan.base.widgets.TextView android:textSize="10sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" app:Font="0"/>
        </LinearLayout>
    </RelativeLayout>
    <kr.timehub.beplan.base.widgets.TextView android:textSize="15sp" android:textColor="@color/textColor" android:id="@+id/tv_setting_push" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/settings_push" app:Font="1"/>
    <kr.timehub.beplan.base.widgets.TextView android:textSize="15sp" android:textColor="@color/textColor" android:id="@+id/tv_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/settings_logout" app:Font="1"/>
</LinearLayout>
